ircv3_parse_derive/tests/ui/de/fail/unknown_attribute.stderr
error: unknown `#[irc]` attribute `cmd`
 --> tests/ui/de/fail/unknown_attribute.rs:4:7
  |
4 | #[irc(cmd)]
  |       ^^^

error: unknown `#[irc]` attribute `unknown`
  --> tests/ui/de/fail/unknown_attribute.rs:12:11
   |
12 |     #[irc(unknown)]
   |           ^^^^^^^

error: unknown `#[irc]` attribute `unknown`
  --> tests/ui/de/fail/unknown_attribute.rs:18:24
   |
18 |     #[irc(tag = "key", unknown)]
   |                        ^^^^^^^

error: unknown `#[irc]` attribute `unknown`
  --> tests/ui/de/fail/unknown_attribute.rs:25:11
   |
25 |     #[irc(unknown)]
   |           ^^^^^^^
